src/app/components/map/map.component.scss
agm-map {
  height: 100vh;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.turd-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.turd-image-wrapper {
  text-align: center;
}

